Add NEWS entry for issue with ordinal numbers inside caps passages in Dutch
see commit 0c30d0c

--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,9 @@ issues]].
 ** New features
 ** Bug fixes
 ** Braille table improvements
+- Fix an issue with ordinal numbers inside caps passages in Dutch
+  braille. Thanks to Bert Frees.
+
 ** Other changes
 ** Deprecation notice
 None
