--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,12 @@ issues]].
 
 ** New features
 ** Bug fixes
+- Don't let a caps passage end on a word with no letters. Thanks to
+  Bert Frees.
+- Handle word resets in the last word of an caps or emphasis passage
+  if the end indicator was placed before the word. Thanks to Bert
+  Frees.
+
 ** Braille table improvements
 - Fix an issue with ordinal numbers inside caps passages in Dutch
   braille. Thanks to Bert Frees.
